subdev: ov5642: add driver
subdev: ov5642: increase drive strength for vga/qvga modes
subdev: ov5642: cleanup redundant code
subdev: ov5642: s/ov5642/ov5642subdev/ for i2c_device_id
ov5642: add longer delay to exit standby, use repeated start for reads

Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

subdev: ov5642: change module name
subdev: ov5642: remove AF firmware and dead code
subdev: ov5642: use pr_debug for debug messages
subdev: ov5642: align set/get_fmt functions with ov5640

Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/drivers/media/platform/mxc/capture/Kconfig
+++ b/drivers/media/platform/mxc/capture/Kconfig
@@ -48,6 +48,12 @@ config MXC_CAMERA_OV5642
 	help
 	  If you plan to use the ov5642 Camera with your MXC system, say Y here.
 
+config MXC_CAMERA_OV5642_V2
+	tristate "OmniVision ov5642 camera support"
+	depends on VIDEO_MXC_CAPTURE && I2C
+	---help---
+	  If you plan to use the ov5642 Camera with your MXC system, say Y here.
+
 config MXC_CAMERA_OV5645_MIPI_V2
         tristate "OmniVision ov5645 camera support using mipi"
         depends on MXC_MIPI_CSI && I2C
