--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -553,6 +553,12 @@ config UID_SYS_STATS_DEBUG
 	help
 	  Per TASK based io statistics exported to /proc/uid_io
 
+config FTP628
+	tristate "Fujitsu FTP628 Thermal Printer"
+	help
+	  The easy loading FTP-608 MCL Series is ultra compact high speed,
+	  battery driven thermal printer, printing on 2-inch wide paper (58mm)
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
