--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -483,6 +483,8 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-pop-arm2.dtb \
 	imx6q-bt.dtb \
 	imx6q-bt2.dtb \
+	imx6q-cid.dtb \
+	imx6q-cid2.dtb \
 	imx6q-cm-fx6.dtb \
 	imx6q-cubox-i.dtb \
 	imx6q-cubox-i-emmc-som-v15.dtb \
