--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -134,6 +134,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MQ) += fsl-imx8mq-ddr3l-arm2.dtb \
 				 fsl-imx8mq-phanbell-no-product.dtb \
 				 fsl-imx8mq-evk-no-product.dtb \
 				 imx8mq-bio.dtb \
+				 imx8mq-nitrogen8m.dtb \
+				 imx8mq-nitrogen8m-m4.dtb \
 
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 fsl-imx8mm-evk-drm.dtb \
