--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
@@ -610,7 +610,7 @@
 		status = "disabled";
 	};
 
-	display-subsystem {
+	fb_dcss: display-subsystem {
 		compatible = "fsl,imx-display-subsystem";
 		ports = <&dcss_port>;
 	};
