max77823: enable driver to build
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -224,4 +224,7 @@ source "drivers/siox/Kconfig"
 source "drivers/slimbus/Kconfig"
 
 source "drivers/energy_model/Kconfig"
+
+source "drivers/battery/Kconfig"
+
 endmenu
