arm64: dts: imx8mq-bio: initial addition
arm64: dts: imx8mq-bio: add arm voltage scaling
arm64: imx8mq-bio: assign 27M parent to CLK2
arm64: dts: imx8mq-bio: move ov5640 to correct bus
arm64: dts: imx8mq-bio.dts: use PWM2 for backlight
arm64: dts: imx8mq-bio: add touchscreen eeti,exc3000
arm64: dts: imx8mq-bio: move touchscreens to i2c bus 4a
arm64: dts: imx8mq-bio: add vpugpu_pd
arm64: dts: imx8mq-bio: fix vpugpu_pd power-domain
arm64: dts: imx8mq-bio: add touchscreen aliases

Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -132,7 +132,9 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MQ) += fsl-imx8mq-ddr3l-arm2.dtb \
 				 fsl-imx8mq-evk-edp.dtb \
 				 fsl-imx8mq-phanbell.dtb \
 				 fsl-imx8mq-phanbell-no-product.dtb \
-				 fsl-imx8mq-evk-no-product.dtb
+				 fsl-imx8mq-evk-no-product.dtb \
+				 imx8mq-bio.dtb \
+
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 fsl-imx8mm-evk-drm.dtb \
 				 fsl-imx8mm-evk-ak4497.dtb \
