--- a/drivers/media/platform/mxc/capture/Makefile
+++ b/drivers/media/platform/mxc/capture/Makefile
@@ -38,6 +38,9 @@ obj-$(CONFIG_MXC_CAMERA_OV5645_MIPI_V2) += ov5645_camera_mipi_v2.o
 tc358743_h2c_bridge-objs := tc358743_h2c.o
 obj-$(CONFIG_MXC_HDMI_CSI2_TC358743) += tc358743_h2c_bridge.o
 
+tc358743_h2c_bridge_v2-objs := tc358743_h2c_v2.o
+obj-$(CONFIG_MXC_HDMI_CSI2_TC358743_V2) += tc358743_h2c_bridge_v2.o
+
 adv7180_tvin-objs := adv7180.o
 obj-$(CONFIG_MXC_TVIN_ADV7180) += adv7180_tvin.o
 
