--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -137,6 +137,7 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MQ) += fsl-imx8mq-ddr3l-arm2.dtb \
 				 imx8mq-nitrogen8m.dtb \
 				 imx8mq-nitrogen8m-edp.dtb \
 				 imx8mq-nitrogen8m-m4.dtb \
+				 imx8mq-nitrogen8m-tc358743.dtb \
 
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 fsl-imx8mm-evk-drm.dtb \
