MLK-22824-1: mfd: pca9450: add pca9450 mfd driver
Add new pmic pca9450 driver for i.mx8mn-evk board.

Signed-off-by: John Lee <john.lee@nxp.com>
Signed-off-by: Robin Gong <yibin.gong@nxp.com>
Reviewed-by: Anson Huang <anson.huang@nxp.com>

--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -247,3 +247,4 @@ obj-$(CONFIG_RAVE_SP_CORE)	+= rave-sp.o
 obj-$(CONFIG_MFD_ROHM_BD718XX)	+= rohm-bd718x7.o
 
 obj-$(CONFIG_MFD_BD71837)       += bd71837.o
+obj-$(CONFIG_MFD_PCA9450)       += pca9450.o
