--- a/arch/arm64/boot/dts/freescale/fsl-imx8mn.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mn.dtsi
@@ -549,7 +549,7 @@
 		status = "disabled";
 	};
 
-	sdma2: dma-controller@302c0000 {
+	sdma2: sdma@302c0000 {
 		compatible = "fsl,imx8mm-sdma", "fsl,imx8mq-sdma", "fsl,imx7d-sdma";
 		reg = <0x0 0x302c0000 0x0 0x10000>;
 		interrupts = <GIC_SPI 103 IRQ_TYPE_LEVEL_HIGH>;
@@ -562,7 +562,7 @@
 		status = "okay";
 	};
 
-	sdma3: dma-controller@302b0000 {
+	sdma3: sdma@302b0000 {
 		compatible = "fsl,imx8mm-sdma", "fsl,imx8mq-sdma", "fsl,imx7d-sdma";
 		reg = <0x0 0x302b0000 0x0 0x10000>;
 		interrupts = <GIC_SPI 34 IRQ_TYPE_LEVEL_HIGH>;
@@ -951,7 +951,7 @@
 		status = "disabled";
 	};
 
-	sdma1: dma-controller@30bd0000 {
+	sdma1: sdma@30bd0000 {
 		compatible = "fsl,imx8mm-sdma", "fsl,imx8mq-sdma", "fsl,imx7d-sdma";
 		reg = <0x0 0x30bd0000 0x0 0x10000>;
 		interrupts = <GIC_SPI 2 IRQ_TYPE_LEVEL_HIGH>;
