--- a/arch/arm64/boot/dts/freescale/fsl-imx8mn.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mn.dtsi
@@ -889,7 +889,7 @@
 		};
 	};
 
-	usdhc1: mmc@30b40000 {
+	usdhc1: usdhc@30b40000 {
 		compatible = "fsl,imx8mm-usdhc", "fsl,imx7d-usdhc";
 		reg = <0x0 0x30b40000 0x0 0x10000>;
 		interrupts = <GIC_SPI 22 IRQ_TYPE_LEVEL_HIGH>;
@@ -905,7 +905,7 @@
 		status = "disabled";
 	};
 
-	usdhc2: mmc@30b50000 {
+	usdhc2: usdhc@30b50000 {
 		compatible = "fsl,imx8mm-usdhc", "fsl,imx7d-usdhc";
 		reg = <0x0 0x30b50000 0x0 0x10000>;
 		interrupts = <GIC_SPI 23 IRQ_TYPE_LEVEL_HIGH>;
@@ -919,7 +919,7 @@
 		status = "disabled";
 	};
 
-	usdhc3: mmc@30b60000 {
+	usdhc3: usdhc@30b60000 {
 		compatible = "fsl,imx8mm-usdhc", "fsl,imx7d-usdhc";
 		reg = <0x0 0x30b60000 0x0 0x10000>;
 		interrupts = <GIC_SPI 24 IRQ_TYPE_LEVEL_HIGH>;
@@ -1022,6 +1022,7 @@
 
 	mipi_dsi: mipi_dsi@32E10000 {
 		#address-cells = <1>;
+		#clock-cells = <1>;
 		#size-cells = <0>;
 		compatible = "fsl,imx8mn-mipi-dsim";
 		reg = <0x0 0x32e10000 0x0 0x400>;
