arm64: dts: imx8mmn-nitrogen8_2eth, initial addition
arm64: dts: imx8mmn-nitrogen8_2eth: rtc rv3028 is at 52
arm64: dts: imx8mmn-nitrogen8_2eth: add backup-switchover-dsm for rtc rv3028
arm64: dts: imx8mmn-nitrogen8_2eth: add touchscreen aliases

Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -169,4 +169,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MN) += fsl-imx8mn-ddr4-evk.dtb \
 				 fsl-imx8mn-ddr4-evk-ak5558.dtb \
 				 fsl-imx8mn-ddr4-evk-root.dtb \
 				 fsl-imx8mn-ddr4-evk-inmate.dtb \
-				 fsl-imx8mn-ddr4-evk-no-product.dtb
+				 fsl-imx8mn-ddr4-evk-no-product.dtb \
+				 imx8mn-nitrogen8_2eth.dtb \
+				 imx8mn-nitrogen8mn.dtb \
+				 imx8mn-nitrogen8mn_som.dtb \
+
