--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -162,6 +162,7 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 imx8mm-nitrogen8mm_som.dtb \
 				 imx8mm-nitrogen8mm_som-m4.dtb \
 				 imx8mm-nitrogen8mm_som-mcp25625.dtb \
+				 imx8mm-span.dtb \
 
 dtb-$(CONFIG_ARCH_FSL_IMX8MN) += fsl-imx8mn-ddr4-evk.dtb \
 				 fsl-imx8mn-ddr4-evk-rpmsg.dtb \
